--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 – Dynamic Web Fundamentals - KINYERA ALVINE</title>
+    <title>WDD 131: Dynamic Web Fundamentals - Kinyera Alvine</title>
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals">
-    <meta name="author" content="kinyera Alvine">
+    <meta name="author" content="Kinyera Alvine">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals</h1>
+        <h1>WDD 131: Dynamic Web Fundamentals - Kinyera Alvine</h1>
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/kinyera-alvine-8a0a10219/" target="_blank">LinkedIn</a></li>
@@ -25,21 +25,47 @@
         </nav>
     </header>
     <main>
-        <section class="card">
-            <h2>About Me</h2>
-            <img src="images/Profile.jpg" alt="profile picture">
-            <p>Welcome to my WDD 131 home page! My name is kinyera Alvine and I am studying web development at BYU-Idaho. I am passionate about creating beautiful and functional websites that provide great user experiences.</p>
-            <p>Through this course, I'll be learning essential concepts in dynamic web development including HTML structure, CSS styling, and JavaScript functionality that brings web pages to life.</p>
-        </section>
-        <section class="card">
-            <h2>WDD 131 Course</h2>
-            <img src="images/web development.jpg" alt="Web development illustration">
-            <p>This course focuses on dynamic web fundamentals, teaching the essential skills needed for modern web development. We will be learning how to create responsive websites that adapt to different screen sizes and devices.</p>
-            <p>By the end of this course, I will have built a portfolio of projects that demonstrate my understanding of web development principles and best practices. I'm excited to apply these skills in my future web development career!</p>
-        </section>
+        <div class="content-container">
+            <section class="about-me">
+                <h2>About Me</h2>
+                <div class="content">
+                    <div class="bio-text">
+                        <p>My name is Kinyera Alvine. I am studying web development at BYU-Idaho. I am passionate about creating beautiful and functional websites that provide great user experiences.</p>
+                        <p>Through this course, I'm learning essential concepts in dynamic web development including HTML structure, CSS styling, and JavaScript functionality that brings web pages to life.</p>
+                    </div>
+                    <div class="profile-image">
+                        <img src="images/profile.jpg" alt="Kinyera Alvine">
+                    </div>
+                </div>
+                
+                <h3>Kampala, Uganda</h3>
+                <div class="location-content">
+                    <div class="flag">
+                        <img src="images/Flag.png" alt="Official Flag of Uganda">
+                        <p class="caption">Official Flag of Uganda</p>
+                    </div>
+                    <div class="location-info">
+                        <p>Kampala is the capital and largest city of Uganda. The city is divided into five boroughs that oversee local planning. Kampala is known for its vibrant culture, bustling markets, and as the economic hub of Uganda.</p>
+                        <p>Uganda is famous for its diverse wildlife including mountain gorillas, the source of the Nile River, and Lake Victoria, Africa's largest lake.</p>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="resources">
+                <h2>Web Dev Resources</h2>
+                <ul>
+                    <li><a href="https://dev.to/" target="_blank">Dev.to Community</a></li>
+                    <li><a href="https://www.smashingmagazine.com/" target="_blank">Smashing Magazine</a></li>
+                    <li><a href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
+                    <li><a href="https://www.w3schools.com/" target="_blank">W3 Schools</a></li>
+                    <li><a href="https://www.udemy.com/" target="_blank">Udemy</a></li>
+                    <li><a href="https://placeholder.com/" target="_blank">Image Placeholder</a></li>
+                </ul>
+            </section>
+        </div>
     </main>
     <footer>
-        <p>&copy; <span id="currentyear"></span> | Kinyera Alvine | Uganda</p>
+        <p>&copy;<span id="currentyear"></span>  Kinyera Alvine |Uganda</p>
         <p id="lastModified"></p>
     </footer>
 </body>
