--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                         <p>Through this course, I'm learning essential concepts in dynamic web development including HTML structure, CSS styling, and JavaScript functionality that brings web pages to life.</p>
                     </div>
                     <div class="profile-image">
-                        <img src="images/profile.jpg" alt="Kinyera Alvine">
+                        <img src="images/picture.jpg" alt="Kinyera Alvine">
                     </div>
                 </div>
                 
-                <h3>Kampala, Uganda</h3>
+                <h3> Kampala, Uganda</h3>
                 <div class="location-content">
                     <div class="flag">
                         <img src="images/Flag.png" alt="Official Flag of Uganda">
