--- a/temples.html
+++ b/temples.html
@@ -24,7 +24,7 @@
         <nav id="primary-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Old</a></li>
+                <li><a href="filtered-temples.html">Old</a></li>
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
                 <li><a href="#">Small</a></li>
