--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="https://www.linkedin.com/in/kinyera-alvine-8a0a10219/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://byupw.instructure.com/" target="_blank">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank">Scripture</a></li>
-                <li><a href="final-project/" target="_blank">Final Project</a></li>
+                <li><a href="Projects/siteplan.html" target="_blank">Final Project</a></li>
                  <li><a href="place.html" target="_blank">place</a></li>
             </ul>
         </nav>
